k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-webapp
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-webapp
  template:
    metadata: 
      labels:
        app: django-webapp
    spec:
      containers:
        - name: django-webapp
          image: 090188239408.dkr.ecr.ap-south-1.amazonaws.com/REPLACE_ECR_IMAGE
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
