k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-webapp-service
  namespace: prod
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  selector:
    app: django-webapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
