k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  namespace: prod
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:090188239408:certificate/5570b695-3f38-438e-b448-5332b1e74e34  # 👈 Your actual ACM ARN
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'

spec:
  ingressClassName: alb
  rules:
    - host: test.devjen.shop
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django-webapp-service
                port:
                  number: 80
